@@ -1,3 +1,8 @@
+18 December 2013
++ re-arrange a lot of files
++ Fix some tests on ARM
++ add "exclusive" test
+
 28 October 2013
 + Add ioctl_period test
 
